--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <section id="homescreen">
             <div class="video-container">
                 <video volume="0" controls muted poster="video/PC-Typing.jpg" autoplay="autoplay"  preload  loop>
-                    <source src="video/AJAIRA BAHINI_1.mp4" type="video/mp4">
-                    <source src="video/AJAIRA BAHINI_1.webm" type="video/webm">
+                    <source src="video/AB.mp4" type="video/mp4">
+                    <source src="video/AB.webm" type="video/webm">
                     
                 </video>   
             </div>
