--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
                             </div>
                         </div>
                     </div>
-                    
+                    <script src="https://apis.google.com/js/platform.js"></script>
+
+<div class="g-ytsubscribe" data-channelid="UCR7AbfHdfdRDJXkDaQCg8Pg" data-layout="full" data-count="hidden"></div>
+
+        </section>
                     <div class="col-sm-6 ">
                         <div class="thumbnail about-us-thumbnail">
                             <iframe width="560" height="330" src="https://www.youtube-nocookie.com/embed/DL32VY1w_vk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
