--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="thumbnail about-us-thumbnail">
-                            <iframe width="560" height="330" src="https://www.youtube.com/embed/IOBF3zHg82Y?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <iframe width="560" height="330" src="https://www.youtube-nocookie.com/embed/alTtRw_jmgE?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             <div class="caption text-center">
-                                <h3> Salman Muqtadir The Balman Roasted </h3>
+                                <h3>Priya Prakash Varrier Full Video Song ROASTED </h3>
                                 <p> </p>
                             </div>
                         </div>
@@ -115,7 +115,7 @@
                     
                     <div class="col-sm-6 ">
                         <div class="thumbnail about-us-thumbnail">
-                            <iframe width="560" height="330" src="https://www.youtube-nocookie.com/embed/DL32VY1w_vk?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                            <iframe width="560" height="330" src="https://www.youtube-nocookie.com/embed/DL32VY1w_vk?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                             <div class="caption text-center">
                                 <h3>Vondo YouTuber TahseeNation ROASTED </h3>
                                 <p>  </p>
@@ -124,6 +124,7 @@
                     </div>
                 </div>
             </div>
+        </section>
             
 
         <!-- About-us section end -->
@@ -511,8 +512,6 @@
   
     </body>
 
-<!-- Mirrored from d2zav2bjdlctd5.cloudfront.net/theme_preview/Boston_HTML/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 05 Feb 2018 10:07:42 GMT -->
 </html>
 
 
-<link rel="stylesheet" type="text/css" href="">
